--- a/frontend/src/components/Header/styles.module.scss
+++ b/frontend/src/components/Header/styles.module.scss
@@ -23,6 +23,10 @@
   padding: 0 0.5rem;
   display: inline-block;
   position: relative;
+  font-size: 20px;
+  font-family: 'poppins';
+  text-transform: uppercase;
+  font-weight: 600;
 
   a {
     color: var(--black-100);
