carrega salas na tela e cadastra

--- a/frontend/src/components/ModalPlantaBaixa/styles.module.scss
+++ b/frontend/src/components/ModalPlantaBaixa/styles.module.scss
@@ -1,3 +1,6 @@
+.inputImage{
+  display: none;
+}
 
 .labelImage{
   min-height: 200px;
@@ -8,10 +11,6 @@
   align-items: center;
   cursor: pointer;
   position: relative;
-
-  input{
-    display: none;
-  }
 
   span{
     z-index: 99;
