--- a/frontend/src/components/Header/styles.module.scss
+++ b/frontend/src/components/Header/styles.module.scss
@@ -1,54 +1,12 @@
-.headerContainer {
-  height: 5rem;
+.botaoSair {
+  margin-left: 2rem;
+  background: transparent;
+  border: 0;
+  transition: transform 0.2s;
+  padding-right: 1rem;
 
-}
-
-.headerContent {
-  max-width: 1120px;
-  height: 5rem;
-  margin: 0 auto;
-  padding: 0 2rem;
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  img {
-    cursor: pointer;
-  }
-}
-
-.menuNav {
-  display: flex;
-  padding: 0 0.5rem;
-  display: inline-block;
-  position: relative;
-  font-size: 20px;
-  font-family: 'poppins';
-  text-transform: uppercase;
-  font-weight: 600;
-
-  a {
-    color: var(--black-100);
-    transition: color 0.2s;
-
-    &+a {
-      margin-left: 2rem;
-    }
-
-    &:hover {
-      color: var(--gray-100);
-    }
-  }
-
-  button{
-    margin-left: 2rem;
-    background: transparent;
-    border: 0;
-    transition: transform 0.2s;
-
-    &:hover {
-      transform: scale(1.4);
-    }
+  &:hover {
+    transform: scale(1.4);
+    transform: rotate(360deg);
   }
 }
