scroll na tabela e imagem

--- a/frontend/src/components/ModalPlantaBaixa/styles.module.scss
+++ b/frontend/src/components/ModalPlantaBaixa/styles.module.scss
@@ -35,3 +35,15 @@
 .label{
   font-weight: 500;
 }
+
+.imageContainer {
+  max-width: 100%;
+  max-height: 60vh;
+  overflow-y: auto;
+}
+
+.tableContainer {
+  max-width: 100%;
+  max-height: 60vh;
+  overflow-y: auto;
+}
