--- a/frontend/src/pages/busca_sala/styles.module.scss
+++ b/frontend/src/pages/busca_sala/styles.module.scss
@@ -1,8 +1,19 @@
-.searchContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; // Espalha os conteúdos verticalmente
-  height: 100vh; // A altura total da tela
-  padding: 20px; // Espaçamento interno
-  box-sizing: border-box; // Garante que o padding não adicione largura extra
+.containerImagem {
+  border: 1px solid gray;
+  padding: 16px;
+  margin: 16px;
+  border-radius: 8px;
+  height: 72vh;
+}
+
+.containerFiltros {
+  margin: 15px;
+
+  & > * {
+    margin-bottom: 5px;
+  }
+
+  & > button {
+    width: 100%;
+  }
 }
