componente select com floating label e ajuste imagem

--- a/frontend/src/pages/busca_sala/styles.module.scss
+++ b/frontend/src/pages/busca_sala/styles.module.scss
@@ -8,6 +8,10 @@
   overflow-x: auto;
   align-items: center;
   justify-content: center;
+
+  & > * {
+    overflow: visible !important;
+  }
 }
 
 .containerFiltros {
