refatoração código e ajuste busca com retorno de duas imagens

--- a/frontend/src/pages/busca_sala/styles.module.scss
+++ b/frontend/src/pages/busca_sala/styles.module.scss
@@ -8,6 +8,7 @@
   overflow-x: auto;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 
   & > * {
     overflow: visible !important;
